# src/main/java/com/vivelibre/springboot/app/api/BooksApi.java
@@ -49,4 +49,32 @@ public interface BooksApi {
     @GetMapping("/allBooks")
     ResponseEntity<List<Book>> getBooks();
 
+    /**
+     * GET /longBooksAndHarryName : Obtener todos los libros
+     *
+     * @return Lista de libros obtenida correctamente (status code 200)
+     *         or Bad Request (status code 400)
+     *         or Not found (status code 404)
+     *         or Error interno del servidor. (status code 500)
+     */
+    @Operation(
+            operationId = "getLongBooksAndHarryName",
+            summary = "Obtener todos los libros",
+            responses = {
+                    @ApiResponse(responseCode = "200", description = "Lista de libros obtenida correctamente", content = {
+                            @Content(mediaType = "application/json", array = @ArraySchema(schema = @Schema(implementation = Book.class)))
+                    }),
+                    @ApiResponse(responseCode = "400", description = "Bad Request"),
+                    @ApiResponse(responseCode = "404", description = "Not found"),
+                    @ApiResponse(responseCode = "500", description = "Error interno del servidor.")
+            }
+    )
+    @RequestMapping(
+            method = RequestMethod.GET,
+            value = "/longBooksAndHarryName",
+            produces = { "application/json" }
+    )
+
+    @GetMapping("/longBooksAndHarryName")
+    ResponseEntity<List<Book>> getLongBooksAndHarryName();
 }
